--- a/public/index.html
+++ b/public/index.html
@@ -72,10 +72,10 @@
     </div>
   <!-- Forked from a template on Tutorialzine: https://tutorialzine.com/2016/06/freebie-landing-page-template-with-flexbox -->
   <header>
-    <h2><a href="#">SixBySix</a></h2>
+    <h2><a href="/">SixBySix</a></h2>
     <nav>
-      <li><a href="#">Privacy Policy</a></li>
-      <li><a href="#">Terms of Service</a></li>
+      <li><a href="privacy-policy.html">Privacy Policy</a></li>
+      <li><a href="terms-of-service.html">Terms of Service</a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">Contact</a></li>
     </nav>
