--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
         function statusChangeCallback(response) {
             if (response.status === 'connected') {
                 console.log('Logged in & authenticated')
-                console.log(response);
+                // console.log(response);
             } else {
                 console.log('NOT Logged in & authenticated')
             }
@@ -74,8 +74,8 @@
   <header>
     <h2><a href="/">SixBySix</a></h2>
     <nav>
-      <li><a href="privacy-policy.html">Privacy Policy</a></li>
-      <li><a href="terms-of-service.html">Terms of Service</a></li>
+      <li><a href="./privacy-policy.html">Privacy Policy</a></li>
+      <li><a href="./terms-of-service.html">Terms of Service</a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">Contact</a></li>
     </nav>
