update logged in greeting for bot and use correct page_id

--- a/public/index.html
+++ b/public/index.html
@@ -75,9 +75,9 @@
     <!-- Your customer chat code -->
     <div class="fb-customerchat"
         attribution=install_email
-        page_id="548140405619645"
-        logged_in_greeting=""Hi! Would you like to accept the #sixbysix challenge. Login using Facebook!"
-        logged_out_greeting=""Hi! Would you like to accept the #sixbysix challenge. Login using Facebook!">
+        page_id="1859439217470688"
+        logged_in_greeting="Congrats on accepting the #sixbysix challenge! Now, Level Up! Are you registered to vote?"
+        logged_out_greeting="Hi! Would you like to accept the #sixbysix challenge. Login using Facebook!">
     </div>
   <!-- Forked from a template on Tutorialzine: https://tutorialzine.com/2016/06/freebie-landing-page-template-with-flexbox -->
   <header>
