--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
     <div class="fb-customerchat"
         attribution=install_email
         page_id="1859439217470688"
-        logged_in_greeting="Congrats on accepting the #sixbysix challenge! Now, Level Up! Are you registered to vote?"
+        logged_in_greeting="Congrats on accepting the #sixbysix challenge! Are you registered to vote?"
         logged_out_greeting="Hi! Would you like to accept the #sixbysix challenge. Login using Facebook!">
     </div>
   <!-- Forked from a template on Tutorialzine: https://tutorialzine.com/2016/06/freebie-landing-page-template-with-flexbox -->
