--- a/public/terms-of-service.html
+++ b/public/terms-of-service.html
@@ -17,6 +17,23 @@
     <title>Terms of Service ("Terms")</title>
 </head>
 <body>
+    <!-- Load Facebook SDK for JavaScript -->
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1';
+        fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
+
+    <!-- Your customer chat code -->
+    <div class="fb-customerchat"
+        attribution=setup_tool
+        page_id="1859439217470688"
+        logged_in_greeting="Congrats on accepting the #sixbysix challenge! Are you registered to vote?"
+        logged_out_greeting="Hi! Would you like to accept the #sixbysix challenge. Login using Facebook!">
+    </div>
     <h1>Terms of Service ("Terms")</h1>
 
 
