--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
   
   <section class="destinations">
     <h3 class="title">Participation Is How You Invoke Change:</h3>
-    <p>Register, Vote, Share.</p>
+    <p>Register, Vote, Share. Repeat!</p>
     <hr>
 
     <ul class="grid">
