add comments describing what to do in the different login statii, add the sample response object

--- a/public/index.html
+++ b/public/index.html
@@ -46,21 +46,42 @@
             }(document, 'script', 'facebook-jssdk'));
         
         function statusChangeCallback(response) {
+          /*
+            response = {
+              status: 'connected',
+              authResponse: {
+                  accessToken: '...',
+                  expiresIn:'...',
+                  signedRequest:'...',
+                  userID:'...'
+              }
+            }
+          */
             if (response.status === 'connected') {
                 console.log('Logged in & authenticated');
                 console.log(response);
+                let currentUserId = response.authResponse.userID;
+                let currentUserAccessToken = response.authResponse.accessToken;
+                // make call to friends and get user data
+                // place user data in db
+                // display user game status
             } if (response.status === 'authorization_expired') {
-              console.log('logged in previously but app authorization to access data expired');
+                console.log('logged in previously but app authorization to access data expired');
                 console.log(response);
+                // ask user to reauthorize app to participate
+                // ask user if they want to see their game status
             } if (response.status === 'not_authorized') {
-              console.log('logged into fb but no app authorization to access data');
+                console.log('logged into fb but no app authorization to access data');
                 console.log(response);
+                // invite user to participate in challenge
             } if (response.status === 'unknown') {
-              console.log("user is either not logged into Facebook or explicitly logged out of your application so it doesn't attempt to connect to Facebook and thus, we don't know if they've authenticated your application or not.");
+                console.log("user is either not logged into Facebook or explicitly logged out of your application so it doesn't attempt to connect to Facebook and thus, we don't know if they've authenticated your application or not.");
                 console.log(response);
+                // invite user to login to fb and participate in challenge
             } else {
                 console.log("not unknown but not known why");
                 console.log(response);
+                // invite user to login to fb and participate in challenge
             }
         }
 
