--- a/public/index.html
+++ b/public/index.html
@@ -116,6 +116,8 @@
     <nav>
       <li><a href="./privacy-policy.html">Privacy Policy</a></li>
       <li><a href="./terms-of-service.html">Terms of Service</a></li>
+      <li><a href="privacy-policy.html">Privacy Policy</a></li>
+      <li><a href="terms-of-service.html">Terms of Service</a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">Contact</a></li>
     </nav>
