--- a/public/index.html
+++ b/public/index.html
@@ -114,10 +114,10 @@
   <header>
     <h2><a href="/">SixBySix</a></h2>
     <nav>
-      <li><a href="https://js-react-todo-0002.firebaseapp.com/privacy-policy.html">Privacy Policy</a></li>
-      <li><a href="https://js-react-todo-0002.firebaseapp.com/terms-of-service.html">Terms of Service</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
+      <a href="https://js-react-todo-0002.firebaseapp.com/privacy-policy.html">Privacy Policy</a>
+      <a href="https://js-react-todo-0002.firebaseapp.com/terms-of-service.html">Terms of Service</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
     </nav>
   </header>
 
