remove position relative from .hero css

--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@
   <header>
     <h2><a href="/">SixBySix</a></h2>
     <nav>
-      <li></li><a href="https://js-react-todo-0002.firebaseapp.com/privacy-policy.html">Privacy Policy</a></li>
+      <li><a href="https://js-react-todo-0002.firebaseapp.com/privacy-policy.html">Privacy Policy</a></li>
       <li><a href="https://js-react-todo-0002.firebaseapp.com/terms-of-service.html">Terms of Service</a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">Contact</a></li>
