refactor copy and add fb share button

--- a/public/index.html
+++ b/public/index.html
@@ -138,6 +138,9 @@
         </fb:login-button>
     </div>
   </section>
+  <section class="hero">
+    <a href=”fb-messenger://share/?link= https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fsharing%2Freference%2Fsend-dialog&app_id=123456789”>Send In Messenger</a>
+  </section>
   
   <section class="destinations">
     <h3 class="title">Participation Is How You Invoke Change:</h3>
@@ -154,7 +157,7 @@
 
   <section class="packages">
     <h3 class="title">Particpate How</h3>
-    <p>We offer a variety of mountaineering packages. Whether you've climbed Everest or don't even know what a mountain is, we've got the perfect vacation for you.</p>
+    <p>There are many ways to participate. Register, vote, and vote early. Encourage friends/family to register, vote, and vote early.</p>
     <hr>
 
     <ul class="grid">
