--- a/public/index.html
+++ b/public/index.html
@@ -138,8 +138,8 @@
         </fb:login-button>
     </div>
   </section>
-  <section class="hero">
-    <a href=”fb-messenger://share/?link= https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fsharing%2Freference%2Fsend-dialog&app_id=123456789”>Send In Messenger</a>
+  <section class="destinations">
+    <a href=”fb-messenger://share/?link= https://www.facebook.com/sixbysixvote/&app_id=548140405619645”>Send In Messenger</a>
   </section>
   
   <section class="destinations">
