add js link option

--- a/public/index.html
+++ b/public/index.html
@@ -207,6 +207,7 @@
   </footer>
   <script src="https://www.gstatic.com/firebasejs/5.4.0/firebase.js"></script>
   <script>
+    window.open('fb-messenger://share?link=' + encodeURIComponent("https://www.facebook.com/sixbysixvote/") + '&app_id=' + encodeURIComponent("548140405619645"));
     // Initialize Firebase
     var config = {
       apiKey: "AIzaSyBAzIzxb7lUHEgs4270yiInGydxejJi5V8",
