change text color to black

--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,7 @@
         </fb:login-button>
     </div>
   </section>
-  <section class="destinations">
+  <section class="destinations fb-link">
     <a href=”fb-messenger://share/?link=https://www.facebook.com/sixbysixvote/&app_id=548140405619645”>Send In Messenger</a>
   </section>
   
