--- a/public/index.html
+++ b/public/index.html
@@ -102,6 +102,10 @@
         fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
     </script>
+    window.extAsyncInit = function() {
+      // the Messenger Extensions JS SDK is done loading
+      console.log("the Messenger Extensions JS SDK is done loading");
+    };
 
     <!-- Your customer chat code -->
     <div class="fb-customerchat"
