add fb page link to footer, remove other social media links from page footer

--- a/public/index.html
+++ b/public/index.html
@@ -102,9 +102,9 @@
         fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));
         window.extAsyncInit = function() {
-      // the Messenger Extensions JS SDK is done loading
-      console.log("the Messenger Extensions JS SDK is done loading");
-      };
+        // the Messenger Extensions JS SDK is done loading
+        console.log("the Messenger Extensions JS SDK is done loading");
+        };
     </script>
     
 
@@ -207,9 +207,7 @@
     <p>Images courtesy of <a href="http://unsplash.com/">unsplash</a>.</p>
     <p>Why are you even reading this?! There's never anything interesting in the footer!</p>
     <ul>
-      <li><a href="#"><i class="fa fa-twitter-square fa-2x"></i></a></li>
-      <li><a href="#"><i class="fa fa-facebook-square fa-2x"></i></a></li>
-      <li><a href="#"><i class="fa fa-snapchat-square fa-2x"></i></a></li>
+      <li><a href="https://www.facebook.com/sixbysixvote"><i class="fa fa-snapchat-square fa-2x"></i></a></li>
     </ul>
   </footer>
   <script src="https://www.gstatic.com/firebasejs/5.4.0/firebase.js"></script>
