open fb link in new window

--- a/public/index.html
+++ b/public/index.html
@@ -207,7 +207,7 @@
     <p>Images courtesy of <a href="http://unsplash.com/">unsplash</a>.</p>
     <p>Why are you even reading this?! There's never anything interesting in the footer!</p>
     <ul>
-      <li><a href="https://www.facebook.com/sixbysixvote"><i class="fa fa-facebook-square fa-2x"></i></a></li>
+      <li><a href="https://www.facebook.com/sixbysixvote" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a></li>
     </ul>
   </footer>
   <script src="https://www.gstatic.com/firebasejs/5.4.0/firebase.js"></script>
